--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -148,6 +148,9 @@
 			</div>
 		</div>
 	</div>
+	<div>
+	 <img src="img/vovakum.jpg"/>
+	</div>
 
 	<div id="gtco-features-2">
 		<div class="gtco-container">
