--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -148,9 +148,7 @@
 			</div>
 		</div>
 	</div>
-	<div>
-	 <img src="img/vovakum.jpg"/>
-	</div>
+
 
 	<div id="gtco-features-2">
 		<div class="gtco-container">
@@ -163,7 +161,7 @@
 			
 			<div class="row">
 				<div class="col-md-4">
-					<div class="gtco-video gtco-video-sm gtco-bg" style="background-image: url(images/img_1.jpg); ">
+					<div class="gtco-video gtco-video-sm gtco-bg" style="background-image: url(images/vovakum.jpg); ">
 						<a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-video"></i></a>
 						<div class="overlay"></div>
 					</div>
