--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -100,7 +100,7 @@
 				<div class="col-md-12 col-md-offset-0 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Solid Free Template</h1>
+							<h1>Привіт Денис</h1>
 							<h2>Free html5 templates Made by <a href="http://gettemplates.co/" target="_blank">gettemplates.co</a></h2>
 							<p>
 								<a href="#" class="btn btn-primary btn-lg">Get Started</a> 
